TR-61162: hw7 services makes exception if return null/empty/false, fix and add tests